# bob-diff

./: .gitignore  Cargo.toml  README.md  bob_diff.h  rustfmt.toml
.github/workflows/: main.yml
src/: diff.rs  lib.rs
tests/: diff.rs
