[package]
name = "bob-diff"
version = "0.4.0"
edition = "2024"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[lib]
name = "bob_diff"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.96"
bob-lib = { git = "https://github.com/swz-git/bob.git" }

[profile.release]
codegen-units=1
lto = true
strip = true
panic = "abort"
